# test-task

service/: Cargo.toml  cfg.toml
service/src/: main.rs
smartcontract/: Cargo.toml  build.sh
smartcontract/res/: smartcontract.wasm
smartcontract/src/: lib.rs
