[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
toml = "0.5.8"
anyhow = "1.0.51"
log = "0.4.14"
flexi_logger = { version = "0.19.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
reqwest = { version = "0.11.4", features = ["gzip", "deflate", "json"] }

[profile.release]
lto = true